--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "core-js": "^3.6.5",
+        "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.9.1",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
@@ -30,7 +31,6 @@
         "vuex": "^4.0.0-0"
     },
     "devDependencies": {
-        "webpack": "^5.9.0",
         "@vue/cli-plugin-babel": "~4.5.12",
         "@vue/cli-plugin-eslint": "~4.5.12",
         "@vue/cli-plugin-router": "~4.5.12",
@@ -49,7 +49,8 @@
         "prettier": "^2.2.1",
         "resolve-url-loader": "^5.0.0",
         "sass-loader": "^8.0.2",
-        "vue-loader": "^16.8.3"
+        "vue-loader": "^16.8.3",
+        "webpack": "^5.9.0"
     },
     "eslintConfig": {
         "root": false,
