--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
         "core-js": "^3.6.5",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.9.1",
+        "jspdf": "^2.5.1",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "maska": "^1.5.0",
+        "pdfmake": "^0.2.6",
+        "puppeteer": "^18.2.1",
+        "rasterizehtml": "^1.3.1",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^3.0.0",
