--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "spatie/browsershot": "^3.57",
-        "spipu/html2pdf": "^5.2",
-        "verumconsilium/laravel-browsershot": "^1.3"
+        "spipu/html2pdf": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
